# table-recognition-api

./: .dockerignore  .gitignore  .replit  CHANGELOG_20251118.md  CHANGELOG_20251118_improvements.md  CHANGELOG_20251120.md  CHANGELOG_20251120_fly_fix.md  CHANGELOG_20251120_hotfix.md  CHANGELOG_20251120_hotfix_2.md  CHANGELOG_20251120_hotfix_3.md  CHANGELOG_20251120_hotfix_4.md  CHANGELOG_20251120_hotfix_5.md  CHANGELOG_20251120_hotfix_6.md  CHANGELOG_20251120_revert_mobile_ux.md  CHANGELOG_20251120_rollback_to_v14.md  CHANGELOG_20251121_fix_oom_and_error_handling.md  CHANGELOG_20251121_linus_rewrite.md  CHANGELOG_20251121_memory_fix.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GITHUB_PAGES_SETUP.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  design_guidelines.md  fly.toml  logs.txt  main.py  package-lock.json  package.json  pyproject.toml  render-requirements.txt  render.yaml  replit.md  requirements.txt  table-recognition.html  vite.config.ts
.github/workflows/: deploy-github-pages.yml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: editable-table.tsx  export-buttons.tsx  processing-indicator.tsx  region-selector.tsx  table-display.tsx  theme-provider.tsx  theme-toggle.tsx  upload-zone.tsx
client/src/lib/: api-config.ts  convert.ts
client/src/pages/: home.tsx
server/: crop_image.py  index.ts  routes.ts  table_recognition.py  utils.ts  vite.ts
shared/: schema.ts
static/: app.js  index.html
