[project]
name = "table-recognition-api"
version = "0.1.0"
description = "PDF table recognition API with OCR"
requires-python = ">=3.11"
dependencies = [
    "lineless-table-rec>=0.1.0",
    "wired-table-rec>=1.2.0",
    "rapidocr-onnxruntime>=1.4.4",
    "Pillow>=12.0.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pyclipper>=1.3.0",
]
